<resources>
    <string name="app_name">ASM_MOB403</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_changepass">Đổi mật khẩu</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_product">Sản phẩm</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_noti">Thông báo</string>
    <string name="menu_report">Báo cáo</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_upgrade">Nâng cấp</string>
    <string name="menu_logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>