<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/product"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_noti"
            android:icon="@drawable/notifi"
            android:title="@string/menu_noti" />
        <item
        android:id="@+id/nav_report"
        android:icon="@drawable/report"
        android:title="@string/menu_report" />
    </group>
     <item android:title="Khác" >
            <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/setting"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_upgrade"
                    android:icon="@drawable/upgrade"
                    android:title="@string/menu_upgrade" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout" />
            </menu>
     </item>
</menu>