<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.asm_mob403.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.asm_mob403.ui.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.asm_mob403.ui.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_noti"
        android:name="com.example.asm_mob403.ui.NotiFragment"
        android:label="@string/menu_noti"
        tools:layout="@layout/fragment_noti" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.asm_mob403.ui.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.asm_mob403.ui.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />




</navigation>